--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Malikbadmus
-God-FearingCoder01
+Malikbadmus <olalekanicontrol@gmail.com>
+God-FearingCoder01  <mhlopenkosikhona@gmail.com>
